# PSBot

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  PROJECT_PLAN.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/bc/: classical.yaml  default.yaml
configs/data/: replays.yaml  selfplay.yaml
configs/evaluation/: default.yaml
configs/ppo/: default.yaml
docs/: DAY_1.md
docs/decisions/: 0001-hybrid-ml-strategy.md
docs/writeups/: TEMPLATE.md
infra/showdown/: Dockerfile
src/psbot/: __init__.py  cli.py  config.py  constants.py
src/psbot/agents/: __init__.py  baselines.py
src/psbot/battle/: __init__.py  server.py
src/psbot/data/: __init__.py  schema.py
src/psbot/evaluation/: __init__.py  manifest.py  stats.py
src/psbot/features/: __init__.py  actions.py  history.py
src/psbot/inference/: __init__.py  posterior.py
src/psbot/training/: __init__.py
tests/: test_actions.py  test_cli.py  test_config.py  test_history.py  test_manifest.py  test_posterior.py  test_schema.py  test_stats.py
