[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "psbot"
version = "0.1.0"
description = "A learning-focused Gen 9 Random Battle ML agent"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "PSBot contributors" }]
dependencies = [
  "httpx>=0.28,<1",
  "numpy>=2.0,<3",
  "poke-env==0.15.0",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "pyyaml>=6,<7",
  "tenacity>=9,<10",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
ml = [
  "huggingface-hub>=0.33,<1",
  "matplotlib>=3.10,<4",
  "polars>=1.31,<2",
  "pyarrow>=20,<23",
  "scikit-learn>=1.7,<2",
  "seaborn>=0.13,<1",
  "stable-baselines3==2.9.0",
  "torch>=2.7,<3",
  "wandb>=0.21,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pre-commit>=4.2,<5",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0,<7",
]

[project.scripts]
psbot = "psbot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/psbot"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["integration: requires a running Showdown server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["psbot"]

[tool.uv]
default-groups = ["dev"]
